--- a/style.css
+++ b/style.css
@@ -3,4 +3,5 @@ body {
     width: 80vw; /* 9%
     margin: auto; /* margem com ajusto automático */
     font-size: 20px; /*o padrão é 16px */
+    font-family:Arial,sans-serif;
 }
